<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_margin="@dimen/_6sdp"
        android:scaleType="fitXY"
        android:id="@+id/poster"/>

</layout>