...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:spanCount="3"
                            tools:itemCount="15"
                            tools:listitem="@layout/items_row"
                            android:id="@+id/rv_tv"/>

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
...
